homework/22.5/k8s/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: ingress.test.ru
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend: 
          service:
            name: frontend-svc
            port:
              number: 80
      - path: /api
        pathType: Exact
        backend:
          service:
            name: backend-svc
            port:
              number: 80
